[package]
name = "singularize"
version = "0.1.0"
edition = "2021"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]

description = "Convert English words from plural to singular and back"
license = "MIT/Apache-2.0"
repository = "https://github.com/droundy/singularize"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
